# misc

cairo-load-picture/: Makefile  README.txt  cairo-widget.c  cairo-widget.h  main.c
expat/: Makefile  expat-parse.c  settings.dtd  test.xml  urf-parse.c
libudev/: dmi.c  input.c  input2.c  input3.c  platform-input.c  rfkill.c
readpe/: readpe.c
set-mok-new/: Make.rules  Makefile  SetMokNew.c
sw-service-skeleton/: Makefile.am  module.c  service-item-view.c  service-item-view.h  service.c  service.h  service.keys.in
